--- a/landing_page.css
+++ b/landing_page.css
@@ -38,6 +38,7 @@ margin-top: 60px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.45);
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+    transition: border .2s ease-in-out;
    
   }
   .card:hover{
@@ -61,6 +62,7 @@ margin-top: 60px;
     opacity: 0.9; 
     cursor: pointer;
 }
+
 .lead-card-btn .btn-secondary{
     width: 100px;
     border-radius: 50px;
