--- a/landing_page.css
+++ b/landing_page.css
@@ -28,7 +28,7 @@ margin-top: 60px;
 .lead {
     font-weight: 300;
 }
-.card {
+.card-1{
     width: 430px;
     height: 340px;
     display: flex;
@@ -36,12 +36,11 @@ margin-top: 60px;
     justify-content: space-between;
      border: 1px solid rgba(255, 255, 255, .25);
     border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.45);
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
     transition: border .2s ease-in-out;
    
   }
-  .card:hover{
+  .card-1:hover{
     border:2px solid green;
   }
   .card-cotainer-1 {
@@ -82,6 +81,37 @@ margin-top: 60px;
     height: auto;
     margin-top: 30px;
     
-    
-    
-  }
+}
+.popup{
+    background: rgb(0, 0, 0,0.6);
+    width:100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.popup-content{
+    height: 250px;
+    width: 500px;
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    position: relative;
+}
+i  {
+    position: absolute;
+    top: -5px;
+    right: -6px;
+    font-size: 30px;
+    color: black;
+}
+i:hover{
+    color: orange;
+    cursor: pointer;
+}
+.lead-card-btn-h1{
+    margin-bottom:40px;
+}
