--- a/landing_page.css
+++ b/landing_page.css
@@ -41,7 +41,7 @@ margin-top: 60px;
    
   }
   .card-1:hover{
-    border:2px solid green;
+    border:3px solid #333;
   }
   .card-cotainer-1 {
     margin: 100px; 
