--- a/login.css
+++ b/login.css
@@ -4,13 +4,19 @@ html {
 .get-flashed-messeges{
     display: none;
 }
+body{
+    background:#ffffff ;
+}
+
 .card{
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.25);
-    border:2px solid green;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.6);
+    border:2px solid #ffffff;
+    background: #333;
+    color: #ffffff;
 }
 .form-group input:focus {
     box-shadow: none;
 }
 .form-group input:hover{
-    border: 3px solid green;
+    border: 4px solid #007bff;
 }
